# sdb-controller

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: helm-publish.yaml  main.yaml  pr.yaml  test-deploy-image.yaml
charts/sdb-controller/: Chart.yaml  values.yaml
deploy/charts/: README.md
deploy/charts/sdb-controller/: .helmignore  Chart.yaml  NOTES.txt  values.tidb.yaml  values.yaml
deploy/charts/sdb-controller/crds/: crd.yaml
deploy/charts/sdb-controller/templates/: _helpers.tpl  deployment.yaml  networkpolicy.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
nix/modules/: devshells.nix  formatter.nix  packages.nix  pre-commit.nix  process-compose.nix
nix/process-compose-modules/: controller.nix  opentelemetry-collector.nix  zipkin.nix
nix/services/: controller.nix  default.nix  opentelemetry-collector.nix  zipkin.nix
src/: cluster.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  run.rs  service.rs
src/cluster/: crd.rs  fixtures.rs  mod.rs
src/database/: crd.rs  fixtures.rs  mod.rs
src/user/: crd.rs  fixtures.rs  mod.rs
tests/: integration_ready_flow.rs
tidb-api/: Cargo.toml
tidb-api/src/: lib.rs  tidb.rs
tidb-api/src/tidb/: tidbclusters.rs  tidbclusters_defaults.rs
yaml/: crd.yaml  deployment.yaml
