[workspace]
resolver = "3"
members = [ "tidb-api" ]

[package]
name = "controller"
version = "0.1.0"
description = "Controller for in cluster management of surreal databases"
homepage = "https://github.com/aexol-studio/sdb-controller"
authors = ["dennor <kamil@aexol.com>"]
edition = "2024"
default-run = "controller"
license = "AGPL 3"
publish = false

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
telemetry = ["opentelemetry-otlp"]

[workspace.dependencies]
#k8s-openapi = { version = "0.25.0", features = ["latest"] }
k8s-openapi = { git = "https://github.com/Arnavion/k8s-openapi.git", rev = "e9a9eaf", features=["latest", "schemars"] }
schemars = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.25"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[dependencies]
k8s-openapi = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
kube = { workspace = true }
actix-web = "4.11.0"
futures = "0.3.31"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry-otlp = { version = "0.30", optional = true, default-features = false, features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
prometheus-client = "0.24.0"
tidb-api = { path = "./tidb-api" }
rand = "0.9.2"
json-patch = "4.0.0"
http = "1"
base64 = "0.22.1"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls-native-roots", "http2", "charset"] }
url = "2.5.4"
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"

[dev-dependencies]
assert-json-diff = "2.0.2"
tower-test = "0.4.0"

[workspace.dependencies.kube]
features = ["runtime", "client", "derive"]
# version = "1.1.0"

# testing new releases - ignore
git = "https://github.com/kube-rs/kube.git"
# branch = "main"
rev = "06e843bf026d0838dca159433e8af8268b6cc0bf"
# path = "../kube/kube"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"
